postion properties,size units,float items,full flexbox

--- a/css tutorials/6_postionprop_SRAFS.html
+++ b/css tutorials/6_postionprop_SRAFS.html
@@ -48,10 +48,10 @@
 <body>
     <div class="container">
 
-        <img id="sunshine" src="download (1).jpeg" alt="sunshine" height="300px" width="300px">
-        <img id="tree" src="download.jpeg" alt="tree" height="300px" width="300px">
-        <img id="flowers" src="pexels-photo-1353126.webp" alt="flowers" height="300px" width="300px">
-        <img id="personalone" src="photo-1503023345310-bd7c1de61c7d.avif" alt="person alone" height="300px" width="300px">
+        <img id="sunshine" src="sunshine.jpeg" alt="sunshine" height="300px" width="300px">
+        <img id="tree" src="tree.jpeg" alt="tree" height="300px" width="300px">
+        <img id="flowers" src="flowers.jpeg" alt="flowers" height="300px" width="300px">
+        <img id="personalone" src="personalone.jpeg" alt="person alone" height="300px" width="300px">
     </div>
 
     <div class="container_2">
