--- a/css tutorials/10.1_MEDIA_QUERIES.html
+++ b/css tutorials/10.1_MEDIA_QUERIES.html
@@ -6,6 +6,12 @@
     <title>Media_queries</title>
     <!-- Media queries is basically at what display size which css  (its tags,boxmodel,font,displayprop,postion,flexbox     which we learnt at back) should be applied  -->
     <style>
+       
+       *{
+            margin: 0;                               /*set size(vw,vh) by box-sizing otherwise it goes out current panel and need to scroll */
+            padding: 0;
+            box-sizing: border-box;
+        }
 
       .container
        {
