--- a/css tutorials/10.2_MEDIA_QUERIES.html
+++ b/css tutorials/10.2_MEDIA_QUERIES.html
@@ -6,6 +6,15 @@
     <title>example of media queries</title>
 
     <style>
+        
+        *{
+            margin: 0;                               /*set size(vw,vh) by box-sizing otherwise it goes out current panel and need to scroll */
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+
+
         .container
         {
             border: solid brown 5px;
