--- a/css tutorials/9_flexbox_DWFJAA_OGSBA.html
+++ b/css tutorials/9_flexbox_DWFJAA_OGSBA.html
@@ -6,6 +6,15 @@
     <title>flexbox-(for flexcontainer)_DWFJAA---(for flexitems)_OGSBA</title>
 
     <style>
+
+       *{
+            margin: 0;                               /*set size(vw,vh) by box-sizing otherwise it goes out current panel and need to scroll */
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+
+
        
        .container
        {
