--- a/css tutorials/13_transitions_PDTD_HOVER.html
+++ b/css tutorials/13_transitions_PDTD_HOVER.html
@@ -40,6 +40,8 @@
             transition-delay: 0s; */
 
             transition: all 1s linear 0s;
+
+            /* we can do also transition: width 1s, height 2s */
         }
 
         
